--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,9 @@ dependencies:
     sdk: flutter
   image_picker: ^1.0.4
   image_cropper: ^9.1.0
+  path: ^1.8.0
+  path_provider: ^2.0.0
+  sqflite: ^2.0.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
